# slownik_upraw

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  todo.md  tsconfig.json
slownik_upraw/: app.py  db.py  db_demo.py  test.ipynb
static/: collapsible.js  collapsible.js.map  collapsible.ts  input.css  search_toggle.js  search_toggle.js.map  search_toggle.ts  styles.css
templates/: api.jinja  base.jinja  jak_to_dziala.jinja  slownik.jinja  slownik_demo.jinja
